# canopy

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  example_policy.toml  pyproject.toml  setup.cfg
.gemini/: settings.json
.github/hooks/: canopy.json
.github/workflows/: gemini-hook.yml
canopy/: __init__.py  main.py  policy.py
canopy_mcp/: audit.py  hooks.py  main.py  policy.py  secret_resolver.py
tests/hooks/: gemini.sh
