[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canopy_mcp"
version = "0.1.0"
description = "Modern Python package for policy management."
authors = [
    { name = "RiskyTrees Labs", email = "hello@riskytrees.com" }
]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.8"
dependencies = ["fastmcp"]

[project.urls]
Homepage = "https://github.com/riskytrees/canopy"
