[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canopy_mcp"
version = "0.3.3"
description = "An MCP proxy server that allows you to write and enforce policies on MCP tool flows"
authors = [
    { name = "RiskyTrees Labs", email = "hello@riskytrees.com" }
]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.8"
dependencies = ["fastmcp"]

[project.urls]
Homepage = "https://riskytrees.com/canopymcp"
