[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canopy_mcp"
version = "0.8.0"
description = "An MCP proxy server and agentic hook tool that allows you to write and enforce policies on agent tool flows"
authors = [
    { name = "RiskyTrees Labs", email = "hello@riskytrees.com" }
]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
dependencies = ["fastmcp", "torch", "transformers"]

[project.urls]
Homepage = "https://riskytrees.com/canopymcp"
