# See https://setuptools.pypa.io/en/latest/userguide/datafiles.html
[metadata]
name = canopy_mcp
version = 0.4.0
description = An MCP proxy server that allows you to write and enforce policies on MCP tool flows
long_description = file: README.md
long_description_content_type = text/markdown
author = Josiah Bruner
author_email = 
license = MIT
url = https://github.com/riskytrees/canopy

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires = 

[options.package_data]
* = *.md, *.toml
